1999-12-30  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmButtons/FvwmButtons.c (swallow):
	longer delay before forcing a colorset background on a swallowed window

	* FvwmScroll/GrabWindow.c:
	removed #define MAX_ICON_NAME_LEN; already in defaults.h

1999-12-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmTheme/FvwmTheme.c (parse_colorset):
	some clean up
	new options 'Plain' and 'NoShape'
	fixed bug that reset bg to default colour when the pixmap was removed

	* FvwmButtons/button.c (buttonColorset):
	* FvwmButtons/draw.c (RedrawButton):
	* FvwmButtons/FvwmButtons.c (recursive_change_colorset):
	Colorset fg/hilight/shdow colours are applied properly to buttons

1999-12-20  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmCommand/FvwmCommandS.c (close_pipes):
	another try to fix the FvwmCommandS-on-exit core dump

1999-12-28  olicha  <olivier.chapuis@free.fr>

	* FvwmScript/FvwmScript.c (ParseOptions):
	(main):
	* FvwmScript/FvwmScript.1
	New options FvwmScriptDefaultFont, FvwmScriptDefaultBack,
	FvwmScriptDefaultFore, FvwmScriptDefaultHilight,
	FvwmScriptDefaultShadow, and FvwmScriptDefaultColorset


1999-12-27  Mikhael Goikhman  <migo@homemail.com>

	* FvwmScript/FvwmScript.c (OpenWindow): set class & resource
	(main): minor rewording in the missing parameter error message

1999-12-27  olicha  <olivier.chapuis@free.fr>

	* FvwmScript/FvwmScript.c (MainLoop): Fixed CPU for perodic Task

	* FvwmScript/Scripts/Find:
	* FvwmScript/Scripts/Makefile.am:
	New script, a front-end to find

1999-12-26  Dan Espen  <dane@mk.telcordia.com>

	* FvwmForm/FvwmForm.c: Fix array bounds write when message exactly
	matches the buffer allocated for it.
	Suppress a UMR in referencing the first byte of unitialized input
	fields.

	* FvwmForm/ReadXServer.c: Backout code cleanup.  Needs more work.

	* FvwmScript/FvwmScript.1: Describe how scripts are located for
	reading.

	* FvwmScript/FvwmScript.c: Read the input file from FVWM_USERHOME