@@ -1,3 +1,9 @@
+1999-12-31  olicha  <olivier.chapuis@free.fr>
+
+	* FvwmScript/FvwmScript.c (BuildGUI):
+        Fixed DefaultColorset
+	Fixed main Colorset against Widget Colors
+	
 1999-12-30  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmButtons/FvwmButtons.c (swallow):
